update categories module
