# app/Http/Resources/CategoryResource.php
@@ -16,8 +16,9 @@ class CategoryResource extends JsonResource
     {
         return [
             'id' => $this->id,
-            'name' => $this->name,
+            'title' => $this->title,
             'slug' => $this->slug,
+            'subtitle' => $this->subtitle ?: 'N/A',
             'status' => $this->status,
         ];
     }
